--- a/Personal Portfolio.html
+++ b/Personal Portfolio.html
@@ -55,7 +55,30 @@
 				</a>
 			</div>
 		</section>
+		<section id="contact" class="contact-section">
+			<h2 style="text-align: center;">Contact Us</h2>
+			<div >
+				<form style="padding-left:45%">
+					<label for="name">Name:</label>
+					<input type="text" id="name" name="name" required>
+					<label for="email">Email:</label>
+					<input type="email" id="email" name="email" required>
+					<label for="message">Message:</label>
+					<textarea id="message" name="message" required></textarea>
+					<button type="submit">Save</button>
+				</form>
+			</div>
 		
+			<div id="contact-links" style="text-align: center;">
+				<a href="https://www.facebook.com/" target="_blank">
+					<img src="images/facebook.svg" alt="fb image">
+				</a>
+				<a href="https://www.linkedin.com/"target="_blank">
+					<img src="images/linkedin.svg" alt="linkedin image">
+				</a>
+			</div>
+
+		</section>
 	</main>
 	<footer style="text-align: center;">
 		<p style="text-align: center;">&copy; 2023 - Marvelous - Amin </p>
