this is my first commit

--- a/Personal Portfolio.html
+++ b/Personal Portfolio.html
@@ -23,7 +23,7 @@
 	<nav id="navbar" class="nav">
 		<ul class="nav-list">
 		  <li>
-			<a href="#welcome-section" target="_blank">About</a>
+			<a href="#welcome-section" id="profile-link" target="_blank">About</a>
 		  </li>
 		  <li>
 			<a href="#projects" target="_blank">Work</a>
@@ -47,9 +47,18 @@
 				<a href="" id="project-tile">
 					<p class="project-title">Survey Form</p>
 				</a>
-				<a href="" id="project-tile">
-					<p class="project-title">Tribute Page</p>
-				</a>
+				 <a    id="product-landing-page"
+          class="project project-tile"
+          href="https://codepen.io/candytale55/pen/MWgjmOv"
+          target="_blank">
+        <img  src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+             alt="Tribute page project snapshot">
+        <p class="project-title">
+          <span class="thingies">&lt;</span>
+          Product Landing Page
+          <span class="thingies">&#47;&gt;</span>
+        </p>                                                           
+      </a>  
 				<a href="" id="project-tile">
 					<p class="project-title">Landing Page</p>
 				</a>
